binrw/tests/ui/invalid_map_fn.stderr
error[E0425]: cannot find value `does_not_exist` in this scope
 --> tests/ui/invalid_map_fn.rs:6:16
  |
6 |     #[br(map = does_not_exist)]
  |                ^^^^^^^^^^^^^^ not found in this scope
